chore: add eviction interval timer configuration to application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,4 @@ eureka:
     fetch-registry: false
   server:
     enable-self-preservation: false
+    eviction-interval-timer-in-ms: 10000  # (opcional) cada cuánto limpia instancias muertas
