--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,5 +10,4 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
   server:
-    enable-self-preservation: false
-    eviction-interval-timer-in-ms: 10000  # (opcional) cada cuánto limpia instancias muertas
+    enable-self-preservation: true
